export const snapshot = {};

snapshot[`duolingo feed --verbose 1`] = `
"
♥︎ Sandy collected the april badge!
♥︎ YOONA did more than 10 lessons in a day!
♥︎ Ella shared a sentence
♥︎ Lea collected the april badge!
♥︎ Rieke_24 shared a sentence
♥︎ Karolina collected the april badge!
♥︎ ecgEva completed a 14 day streak!
♥︎ susan collected the april badge!
♥︎ rita did more than 10 lessons in a day!
  Rieke_24 collected the april badge!
♥︎ ✍️Viking L Belgium collected the april badge!
♥︎ rita collected the april badge!
  Quỳnh Anh did more than 10 lessons in a day!
♥︎ Deborah finished top 3 and was promoted to the amethyst league!
♥︎ Ника shared a sentence
♥︎ Ника shared a sentence
♥︎ Ferdinand Greger did more than 10 lessons in a day!
  Quỳnh Anh finished top 3 and was promoted to the ruby league!
♥︎ Victor Hugo did more than 10 lessons in a day!
♥︎ Lynda collected the april badge!
  Naysú collected the april badge!
  Naysú did more than 10 lessons in a day!
  Kiku collected the april badge!
♥︎ Mary Borisova completed a 900 day streak!
♥︎ Roberto collected the april badge!
♥︎ ❤️ ❤️ Simba ❤️ ❤️ collected the april badge!
♥︎ Bar Pab completed a 365 day streak!
♥︎ Muhammet Ali Iskırık earned a total of 12500 xp!
♥︎ Wagner Souto did more than 10 lessons in a day!
♥︎ Wagner Souto collected the april badge!
♥︎ Weronika collected the april badge!
♥︎ Mélanie collected the april badge!
♥︎ Fatma Bensoy completed a 200 day streak!
♥︎ Timo collected the april badge!
♥︎ angeles soto lopez collected the april badge!
♥︎ Rieke_24 shared a sentence
♥︎ Teddísek completed a 50 day streak!
♥︎ Gunita did more than 10 lessons in a day!
♥︎ Анна collected the april badge!
♥︎ Lisa102017 came back to learn after a long time!
♥︎ Cookie collected the april badge!
♥︎ Vanessa shared a sentence
♥︎ Cookie completed a 7 day streak!
♥︎ Eli collected the april badge!
♥︎ Elisa collected the april badge!
♥︎ Mona came back to learn spanish after 1 month!
♥︎ Rieke_24 shared a sentence
♥︎ Jenny Lee collected the april badge!
"
`;

snapshot[`duolingo feed 1`] = `
"
♥︎ Sandy collected the april badge!
♥︎ YOONA did more than 10 lessons in a day!
♥︎ Ella shared a sentence
♥︎ Lea collected the april badge!
♥︎ Rieke_24 shared a sentence
♥︎ Karolina collected the april badge!
♥︎ ecgEva completed a 14 day streak!
♥︎ susan collected the april badge!
♥︎ rita did more than 10 lessons in a day!
  Rieke_24 collected the april badge!
♥︎ ✍️Viking L Belgium collected the april badge!
♥︎ rita collected the april badge!
  Quỳnh Anh did more than 10 lessons in a day!
♥︎ Deborah finished top 3 and was promoted to the amethyst league!
♥︎ Ника shared a sentence
♥︎ Ника shared a sentence
♥︎ Ferdinand Greger did more than 10 lessons in a day!
  Quỳnh Anh finished top 3 and was promoted to the ruby league!
♥︎ Victor Hugo did more than 10 lessons in a day!
♥︎ Lynda collected the april badge!
  Naysú collected the april badge!
  Naysú did more than 10 lessons in a day!
  Kiku collected the april badge!
♥︎ Mary Borisova completed a 900 day streak!
♥︎ Roberto collected the april badge!
♥︎ ❤️ ❤️ Simba ❤️ ❤️ collected the april badge!
♥︎ Bar Pab completed a 365 day streak!
♥︎ Muhammet Ali Iskırık earned a total of 12500 xp!
♥︎ Wagner Souto did more than 10 lessons in a day!
♥︎ Wagner Souto collected the april badge!
♥︎ Weronika collected the april badge!
♥︎ Mélanie collected the april badge!
♥︎ Fatma Bensoy completed a 200 day streak!
♥︎ Timo collected the april badge!
♥︎ angeles soto lopez collected the april badge!
♥︎ Rieke_24 shared a sentence
♥︎ Teddísek completed a 50 day streak!
♥︎ Gunita did more than 10 lessons in a day!
♥︎ Анна collected the april badge!
♥︎ Lisa102017 came back to learn after a long time!
♥︎ Cookie collected the april badge!
♥︎ Vanessa shared a sentence
♥︎ Cookie completed a 7 day streak!
♥︎ Eli collected the april badge!
♥︎ Elisa collected the april badge!
♥︎ Mona came back to learn spanish after 1 month!
♥︎ Rieke_24 shared a sentence
♥︎ Jenny Lee collected the april badge!
"
`;

snapshot[`duolingo feed --engage 1`] = `
"
♥︎ Sandy collected the april badge!
♥︎ YOONA did more than 10 lessons in a day!
♥︎ Ella shared a sentence
♥︎ Lea collected the april badge!
♥︎ Rieke_24 shared a sentence
♥︎ Karolina collected the april badge!
♥︎ ecgEva completed a 14 day streak!
♥︎ susan collected the april badge!
♥︎ rita did more than 10 lessons in a day!
♥︎ Rieke_24 collected the april badge!
♥︎ ✍️Viking L Belgium collected the april badge!
♥︎ rita collected the april badge!
♥︎ Quỳnh Anh did more than 10 lessons in a day!
♥︎ Deborah finished top 3 and was promoted to the amethyst league!
♥︎ Ника shared a sentence
♥︎ Ника shared a sentence
♥︎ Ferdinand Greger did more than 10 lessons in a day!
♥︎ Quỳnh Anh finished top 3 and was promoted to the ruby league!
♥︎ Victor Hugo did more than 10 lessons in a day!
♥︎ Lynda collected the april badge!
♥︎ Naysú collected the april badge!
♥︎ Naysú did more than 10 lessons in a day!
♥︎ Kiku collected the april badge!
♥︎ Mary Borisova completed a 900 day streak!
♥︎ Roberto collected the april badge!
♥︎ ❤️ ❤️ Simba ❤️ ❤️ collected the april badge!
♥︎ Bar Pab completed a 365 day streak!
♥︎ Muhammet Ali Iskırık earned a total of 12500 xp!
♥︎ Wagner Souto did more than 10 lessons in a day!
♥︎ Wagner Souto collected the april badge!
♥︎ Weronika collected the april badge!
♥︎ Mélanie collected the april badge!
♥︎ Fatma Bensoy completed a 200 day streak!
♥︎ Timo collected the april badge!
♥︎ angeles soto lopez collected the april badge!
♥︎ Rieke_24 shared a sentence
♥︎ Teddísek completed a 50 day streak!
♥︎ Gunita did more than 10 lessons in a day!
♥︎ Анна collected the april badge!
♥︎ Lisa102017 came back to learn after a long time!
♥︎ Cookie collected the april badge!
♥︎ Vanessa shared a sentence
♥︎ Cookie completed a 7 day streak!
♥︎ Eli collected the april badge!
♥︎ Elisa collected the april badge!
♥︎ Mona came back to learn spanish after 1 month!
♥︎ Rieke_24 shared a sentence
♥︎ Jenny Lee collected the april badge!
"
`;
